crates/telemetry-adapters/tests/snapshots/snapshots_codemasters_family__dirt3_rally_stage_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_codemasters_family.rs
expression: normalized
---
speed_ms: 30.25
steering_angle: -0.18
throttle: 0.65
brake: 0.12
clutch: 0
rpm: 5800
max_rpm: 7500
gear: 4
num_gears: 6
lateral_g: 1.2
longitudinal_g: -0.4
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 85
  - 82
  - 78
  - 76
tire_pressures_psi:
  - 28.5
  - 28
  - 26.5
  - 26
ffb_scalar: 0.4
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 3
lap: 1
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.5090909
engine_temp_c: 0
extended:
  rpm_fraction:
    type: Float
    value: 0.7733333
  wheel_speed_fl:
    type: Float
    value: 29.5
  wheel_speed_fr:
    type: Float
    value: 30
  wheel_speed_rl:
    type: Float
    value: 31
  wheel_speed_rr:
    type: Float
    value: 30.5
sequence: 0
