crates/telemetry-adapters/tests/snapshots/snapshots_codemasters_family__dirt_showdown_derby_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_codemasters_family.rs
expression: normalized
---
speed_ms: 12.25
steering_angle: -0.72
throttle: 1
brake: 0
clutch: 0
rpm: 6200
max_rpm: 7000
gear: 2
num_gears: 5
lateral_g: 2.5
longitudinal_g: -1.8
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 110
  - 105
  - 95
  - 100
tire_pressures_psi:
  - 25
  - 24.5
  - 24
  - 23.5
ffb_scalar: 0.8333333
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 5
lap: 3
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 45.8
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.25
engine_temp_c: 0
extended:
  rpm_fraction:
    type: Float
    value: 0.8857143
  wheel_speed_fl:
    type: Float
    value: 12
  wheel_speed_fr:
    type: Float
    value: 11.5
  wheel_speed_rl:
    type: Float
    value: 13
  wheel_speed_rr:
    type: Float
    value: 12.5
sequence: 0
