crates/telemetry-adapters/tests/snapshots/snapshots_codemasters_family__grid_2019_race_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_codemasters_family.rs
expression: normalized
---
speed_ms: 55.25
steering_angle: 0.05
throttle: 0.92
brake: 0
clutch: 0
rpm: 7200
max_rpm: 8500
gear: 5
num_gears: 7
lateral_g: 0.6
longitudinal_g: 0.8
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 92
  - 90
  - 80
  - 82
tire_pressures_psi:
  - 30
  - 29.5
  - 28
  - 28.5
ffb_scalar: 0.2
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 2
lap: 5
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 78.42
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.3
engine_temp_c: 0
extended:
  rpm_fraction:
    type: Float
    value: 0.84705883
  wheel_speed_fl:
    type: Float
    value: 54.5
  wheel_speed_fr:
    type: Float
    value: 55
  wheel_speed_rl:
    type: Float
    value: 56
  wheel_speed_rr:
    type: Float
    value: 55.5
sequence: 0
